--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
 
       <section id="masthead" class="group">
         <header class="group">
-          <p><a href="/">User<br>Obsessed</a></p>
+          <p><a href="/">Fernando<br>Diaz</a></p>
           <h1>On building software for people</h1>
           <img src="/images/uo-logo.png">
         </header>
