--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 
-    <title>{% if page.title %}{{ page.title }} | {% endif %}User Obsessed: On building software for people</title>
+    <title>{% if page.title %}{{ page.title }} | {% endif %} Personal blog of Fernando Diaz</title>
 
     <script type="text/javascript" src="http://use.typekit.com/jjw2jrj.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
@@ -32,9 +32,17 @@
 
       <section id="masthead" class="group">
         <header class="group">
-          <p><a href="/">Fernando<br>Diaz</a></p>
-          <h1>On building software for people</h1>
-          <img src="/images/uo-logo.png">
+          <p><a href="/">Fer's dev blog</a></p>
+          <h1>Ruby developer and start-up addict</h1>
+          <nav class="icon-pannel">
+            <ul class="icons">
+              <li class="icon"><a href="http://twitter.com/fdiazgarrido"><em class="twitter"></em><b>Twitter</b></a></li>
+              <li class="icon"><a href="http://github.com/fery"><em class="github"></em><b>GitHub</b></a></li>
+              <li class="icon"><a href="http://linkedin.com"><em class="linkedin"></em><b>LinkedIn</b></a></li>
+              <li class="icon"><a href="http://feeds.feedburner.com/ferdg"><em class="rss"></em><b>RSS</b></a></li>
+            </ul>
+          </nav>
+
         </header>
       </section>
 
@@ -45,98 +53,26 @@
         </section>
 
         <section id="sidebar">
-
-          <section id="meta-col1" class="meta group">
-            <aside id="about">
-              <header>
-                <h3>About</h3>
-              </header>
-              <p>
-                User Obsessed is a blog that explores the role developers play in defining the way users experience software. <a href="/about">See more.</a>
-              </p>
-            </aside>
-
-            <aside>
-              <header>
-                <h3>Stay up to date</h3>
-              </header>
-              <nav>
-                <ul>
-                  <li class="icon rss"><a href="http://feeds.feedburner.com/userobsessed">RSS</a></li>
-                  <li class="icon twitter"><a href="http://twitter.com/userobsessed">Twitter</a></li>
-                  <li class="icon"><a href="/subscribe">More</a></li>
-                </ul>
-              </nav>
-            </aside>
-
-            <aside id="ads">
+          <aside>
+            <header>
+              <h3>The Author</h3>
+            </header>
             <p>
-              <a href="/reviews/2011/01/13/review-authoring-ebooks-by-jeremy-mcanally/">
-                <img src="/images/authoring-ebooks-ad.png">
-              </a>
+              I'm Fernando Diaz, a passionate web developer currently working as a mobile developer for Victor Chandler. 
+              I love the ruby community, the open source philosophy and everything related with start-ups.
+              I will try to share my thought in development especially the mobile related ones
             </p>
-            </aside>
-
-          </section>
-
-          <section id="meta-col2" class="meta group">
-
-            <aside id="bio">
-              <header>
-                <h3>The Author</h3>
-              </header>
-              <p>
-              My name is Joe Fiorini. I am a web developer from Cleveland, Ohio. I work for <a href="http://leandog.com">LeanDog Software</a> where I build software using <a href="http://www.rubyonrails.org">Ruby on Rails</a>. <a href="/bio">See more.</a>
-              </p>
-            </aside>
-
-            <aside>
-              <nav id="extra">
-                <ul>
-                  <li><a href="/colophon">Colophon</a></li>
-                  <li><a href="/contact">Contact</a></li>
-                </ul>
-              </nav>
-            </aside>
-
-          </section>
-
+          </aside>
         </section>
-
       </section>
 
       <section id="footer" class="group">
         <footer class="group">
-          <nav id="site">
-            <ul>
-              <li><a href="/">Home</a></li>
-              <li><a href="/about">About</a></li>
-              <li><a href="/contact">Contact</a></li>
-              <li><a href="/subscribe">Subscribe</a></li>
-              <li><a href="/colophon">Colophon</a></li>
-            </ul>
-          </nav>
           <p class="copyright">
-            &copy;2011 &ndash; Joe Fiorini
+            <a href="http://userobsessed.net">Based on Joe Fiorini blog</a>
           </p>
         </footer>
       </section>
-
-    </section>
-
-    <script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-23094691-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
 
   </body>
 </html>
