--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,21 +29,31 @@
   <body class="{{ page.layout }}">
 
     <section id="main">
+      <header class="group" id="header">
+        <p><a href="/">fer.dev</a></p>
+        <h1>Ruby developer and start-up addict</h1>
+        <nav class="icon-pannel">
+          <ul class="icons">
+            <li class="icon"><a href="http://twitter.com/fdiazgarrido"><em class="twitter"></em><b>Twitter</b></a></li>
+            <li class="icon"><a href="http://github.com/fery"><em class="github"></em><b>GitHub</b></a></li>
+            <li class="icon"><a href="http://linkedin.com"><em class="linkedin"></em><b>LinkedIn</b></a></li>
+            <li class="icon"><a href="http://feeds.feedburner.com/ferdg"><em class="rss"></em><b>RSS</b></a></li>
+          </ul>
+        </nav>
+      </header>
 
-      <section id="masthead" class="group">
-        <header class="group">
-          <p><a href="/">Fer's dev blog</a></p>
-          <h1>Ruby developer and start-up addict</h1>
-          <nav class="icon-pannel">
-            <ul class="icons">
-              <li class="icon"><a href="http://twitter.com/fdiazgarrido"><em class="twitter"></em><b>Twitter</b></a></li>
-              <li class="icon"><a href="http://github.com/fery"><em class="github"></em><b>GitHub</b></a></li>
-              <li class="icon"><a href="http://linkedin.com"><em class="linkedin"></em><b>LinkedIn</b></a></li>
-              <li class="icon"><a href="http://feeds.feedburner.com/ferdg"><em class="rss"></em><b>RSS</b></a></li>
-            </ul>
-          </nav>
 
-        </header>
+      <section id="sidebar">
+        <aside>
+          <header>
+            <h3>The Author</h3>
+          </header>
+          <p>
+            I'm Fernando Diaz, a passionate web developer currently working as a mobile developer for Victor Chandler. 
+            I love the ruby community, the open source philosophy and everything related with start-ups.
+            I will try to share my thought in development especially the mobile related ones
+          </p>
+        </aside>
       </section>
 
       <section id="focus" class="group">
@@ -52,18 +62,7 @@
           {{ content }}
         </section>
 
-        <section id="sidebar">
-          <aside>
-            <header>
-              <h3>The Author</h3>
-            </header>
-            <p>
-              I'm Fernando Diaz, a passionate web developer currently working as a mobile developer for Victor Chandler. 
-              I love the ruby community, the open source philosophy and everything related with start-ups.
-              I will try to share my thought in development especially the mobile related ones
-            </p>
-          </aside>
-        </section>
+
       </section>
 
       <section id="footer" class="group">
