--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
     <title>{% if page.title %}{{ page.title }} | {% endif %} Personal blog of Fernando Diaz</title>
 
-    <script type="text/javascript" src="http://use.typekit.com/jjw2jrj.js"></script>
+    <script type="text/javascript" src="http://use.typekit.com/xas3ecr.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
     <link type="text/css" rel="stylesheet" href="/stylesheets/reset.css">
