--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
     <section id="main">
       <header class="group" id="header">
         <p><a href="/">fer.dev</a></p>
-        <h1>Ruby developer and start-up addict</h1>
+        <h1 class ="tk-dejarip" >Ruby developer and start-up addict</h1>
         <nav class="icon-pannel">
           <ul class="icons">
             <li class="icon"><a href="http://twitter.com/fdiazgarrido"><em class="twitter"></em><b>Twitter</b></a></li>
