--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -1,11 +1,11 @@
 /* general --------------------- */
 
 p {
-  font: 1.4em "ff-tisa-web-pro-1","ff-tisa-web-pro-2";
+  font: 1.4em ;
 }
 
 ol li, ul li {
-  font: 1em "ff-tisa-web-pro-1","ff-tisa-web-pro-2";
+  font: 1em ;
 }
 
 p+p, p+ol, p+ul {
@@ -55,7 +55,6 @@ sup {
 
 aside p {
   color:         #999;
-  font-family:   "ff-tisa-web-pro-1","ff-tisa-web-pro-2";
   font-size:     1.2em;
   line-height:   1.3em;
 }
@@ -113,7 +112,7 @@ header#header p {
 }
 
 header#header h1 {
-  font:        italic 2em "ff-tisa-web-pro-1","ff-tisa-web-pro-2";
+  font:        italic 2em;
   float:       left;
   width:       50%;
   text-align:  left;
@@ -122,7 +121,7 @@ header#header h1 {
 }
 
 header#header p {
-  font:          600 9em "atrament-web-1", "atrament-web-2";
+  font:          600 9em ;
   width:         43%;
   margin-bottom: 45px;
   line-height:   .9em;
@@ -306,7 +305,6 @@ article blockquote {
   width:       475px;
   padding:     0 50px;
   text-indent: 25px;
-  font-family: "ff-tisa-web-pro-1","ff-tisa-web-pro-2";
 }
 
 article blockquote:before, article blockquote:after {
